--- a/_data/system/storage/efi.yaml
+++ b/_data/system/storage/efi.yaml
@@ -1,38 +1,20 @@
 map: !!map
 
-  # SINGLE EFI PARTITION
-  b84ab5fb-9500-4b17-b322-bd04e31f5d3a  : !!str single_efi_partition
-  cf65c6ee-bd52-47c4-af3d-a53c0ff8b032  : !!str single_efi_partition
-  66df9fd1-5ee6-42a1-831e-b3b9d6e26524  : !!str single_efi_partition
-  a852843f-53ac-47e9-a82d-d6cf288c8b76  : !!str single_efi_partition
+  # EFI ON PARTITION
+  b84ab5fb-9500-4b17-b322-bd04e31f5d3a  : !!str partition
+  cf65c6ee-bd52-47c4-af3d-a53c0ff8b032  : !!str partition
+  66df9fd1-5ee6-42a1-831e-b3b9d6e26524  : !!str partition
+  a852843f-53ac-47e9-a82d-d6cf288c8b76  : !!str partition
 
-  # MULTIPLE EFI PARTITIONS
-  ff8a81bc-82d1-440a-9f71-df9676a19a26  : !!str multiple_efi_partitions
-
-  # SINGLE EFI PARTITION WITH DETACHED HEADER
+  # EFI ON RAID ARRAY
+  ff8a81bc-82d1-440a-9f71-df9676a19a26  : !!str array
 
 scenario: !!map
 
-  # SINGLE EFI PARTITION
-  single_efi_partition    : !!map
-    plural      : !!bool false
-    mkdir       : !!str efi
-    partitions  : !!seq
-      - !!map
-        node  : !!str /dev/sda1
-        label : !!str EFI
-        mount : !!str /mnt/efi
+  partition : !!map
+    context : !!str partition
+    node    : !!str /dev/sda1
 
-  # MULTIPLE EFI PARTITIONS
-  multiple_efi_partitions : !!map
-    plural      : !!bool true
-    mkdir       : !!str "{efi1,efi2}"
-    partitions  : !!seq
-      - !!map
-        node  : !!str /dev/sda1
-        label : !!str EFI1
-        mount : !!str /mnt/efi1
-      - !!map
-        node  : !!str /dev/sdb1
-        label : !!str EFI2
-        mount : !!str /mnt/efi2
+  array     : !!map
+    context : !!str array
+    node    : !!str /dev/md/efi
