--- a/_data/system/configuration/initial-ramdisk.yaml
+++ b/_data/system/configuration/initial-ramdisk.yaml
@@ -1,19 +1,40 @@
-# LVM - LUKS ON SINGLE PARTITION
-b84ab5fb-9500-4b17-b322-bd04e31f5d3a: !!str |
-                                      FILES=(/etc/luks-keys/cryptlvm.keyfile)
-                                      HOOKS=(base udev autodetect modconf block encrypt lvm2 filesystems keyboard keymap fsck)
+map       : !!map
 
-# LVM - LUKS ON MULTIPLE PARTITIONS
-66df9fd1-5ee6-42a1-831e-b3b9d6e26524: !!str |
-                                      FILES=(/etc/luks-keys/cryptlvm1.keyfile /etc/luks-keys/cryptlvm2.keyfile)
-                                      HOOKS=(base systemd autodetect modconf block sd-encrypt sd-lvm2 filesystems keyboard sd-vconsole fsck)
+  # LUKS ON SINGLE PARTITION
+  b84ab5fb-9500-4b17-b322-bd04e31f5d3a  : !!str luks_single_partition
+  cf65c6ee-bd52-47c4-af3d-a53c0ff8b032  : !!str luks_single_partition
 
-# LVM - LUKS ON RAID
-ff8a81bc-82d1-440a-9f71-df9676a19a26: !!str |
-                                      FILES=(/etc/luks-keys/cryptlvm.keyfile)
-                                      HOOKS=(base udev autodetect modconf block mdadm_udev encrypt lvm2 filesystems keyboard keymap fsck)
+  # LUKS ON MULTIPLE PARTITIONS
+  66df9fd1-5ee6-42a1-831e-b3b9d6e26524  : !!str luks_multiple_partitions
 
-# LVM - LUKS ON LOGICAL VOLUMES
-a852843f-53ac-47e9-a82d-d6cf288c8b76: !!str |
-                                      FILES=(/etc/luks-keys/cryptroot.keyfile)
-                                      HOOKS=(base udev autodetect modconf block encrypt lvm2 filesystems keyboard keymap fsck)
+  # LUKS ON RAID
+  ff8a81bc-82d1-440a-9f71-df9676a19a26  : !!str luks_raid
+
+  # LUKS ON LOGICAL VOLUMES
+  a852843f-53ac-47e9-a82d-d6cf288c8b76  : !!str luks_logical_volumes
+
+scenario  : !!map
+
+  # LUKS ON SINGLE PARTITION
+  luks_single_partition     : !!map
+    has_raid      : !!bool false
+    has_systemd   : !!bool false
+    files         : !!str /etc/luks-keys/crypt_context_.keyfile
+
+  # LUKS ON MULTIPLE PARTITIONS
+  luks_multiple_partitions  : !!map
+    has_raid      : !!bool false
+    has_systemd   : !!bool true
+    files         : !!str /etc/luks-keys/crypt_context_1.keyfile /etc/luks-keys/crypt_context_2.keyfile
+
+  # LUKS ON RAID
+  luks_raid                 : !!map
+    has_raid      : !!bool true
+    has_systemd   : !!bool false
+    files         : !!str /etc/luks-keys/crypt_context_.keyfile
+
+  # LUKS ON LOGICAL VOLUMES
+  luks_logical_volumes      : !!map
+    has_raid      : !!bool false
+    has_systemd   : !!bool false
+    files         : !!str /etc/luks-keys/cryptroot.keyfile
