--- a/_data/system/storage/lvm.yaml
+++ b/_data/system/storage/lvm.yaml
@@ -30,12 +30,14 @@ scenario: !!map
                   ├── cryptlvm2       LVM2_member
                       ├──grp-home     ext4
 
+  # LUKS ON RAID
   ff8a81bc-82d1-440a-9f71-df9676a19a26: !!map
     node_list : !!str /dev/mapper/cryptlvm
     map       : !!str |
                 sda
-                ├──sda1
-                ├──sda2                 linux_raid_m
+                ├──sda1                 linux_raid_member
+                  ├── md126
+                ├──sda2                 linux_raid_member
                   ├── md127             crypto_LUKS
                     ├── cryptlvm        LVM2_member
                         ├──grp-root     ext4
@@ -43,11 +45,15 @@ scenario: !!map
                         ├──grp-var      ext4
                         ├──grp-home     ext4
                 sdb
-                ├──sdb1
-                ├──sdb2                 linux_raid_m
+                ├──sdb1                 linux_raid_member
+                  ├── md126
+                ├──sdb2                 linux_raid_member
                   ├── md127             crypto_LUKS
                     ├── cryptlvm        LVM2_member
                         ├──grp-root     ext4
                         ├──grp-swap     swap
                         ├──grp-var      ext4
                         ├──grp-home     ext4
+
+  a852843f-53ac-47e9-a82d-d6cf288c8b76: !!map
+    node_list : !!str /dev/sda2 /dev/sdb1
